[package]
name = "blockchain-rs"
version = "0.5.0"
authors = ["Lucas Vieira <lucasvieira@protonmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
rust-crypto = "0.2.36"
uuid = { version = "0.4", features = ["serde", "v4"] }
rustyline = "1.0.0"
tiny_http = "0.5.8"
url = "1.6.0"
reqwest = "0.8.1"
rust-base58 = "0.0.4"